process API skip 제거
