# src/app/Process/processController.js
@@ -40,6 +40,7 @@ exports.getProcess = async function (req, res) {
  *  2 API Name : 운동 루틴 대체 추천 API
  * [GET] /app/process/replace
  */
+// TODO : 운동 주의사항도 반환해주기
 exports.getReplacementRecommendations = async function (req, res) {
     /**
      * Query Parameter : healthCateogryIdx
@@ -60,85 +61,39 @@ exports.getReplacementRecommendations = async function (req, res) {
 
 }
 
-
 /**
- *  3 API 이름 : 대체된 운동 정보 업데이트 API
- * [Patch] /app/process/replace
- */
-exports.patchReplaceExerciseInRoutine = async function (req, res) {
-    /**
-     * Decoded : userId
-     * Query Parameter : routineIdx
-     * Body : afterHealthCategoryIdx, beforeHealthCategoryIdx
-     */
-    
-    const routineIdx = req.query.routineIdx
-    const beforeHealthCategoryIdx = req.body.beforeHealthCategoryIdx
-    const afterHealthCategoryIdx = req.body.afterHealthCategoryIdx
-    const userId = req.decoded.userId
-
-    // 1. 회원과 요청된 데이터 검증
-    const isValidUser = await processProvider.validateUser(userId, routineIdx);
-    if (!isValidUser) {
-        return res.send(response(baseResponse.TOKEN_VERIFICATION_FAILURE))
-    }
-
-    // routineIdx 에 포함된 heatlthCategoryIdx 검증
-    if (!Number.isInteger(parseInt(beforeHealthCategoryIdx)) || parseInt(beforeHealthCategoryIdx) <= 0) {
-        return res.send(response(baseResponse.INVALID_ROUTINE_IDX));
-    }
-
-    await processProvider.updateHealthCategoryInRoutineDetail(routineIdx, beforeHealthCategoryIdx, afterHealthCategoryIdx, userId)
-
-    return res.send(response(baseResponse.SUCCESS));
-};
-
-/**
- * 4 API Name : 운동 건너뛰기 API
- * [PATCH] /app/process
- */
-exports.skipExercise = async function (req, res) {
-    /**
-     * Decoded : userId
-     * Query Parameter : routineIdx
-     * Body : healthCategoryIdx
-     */
-    const healthCategoryIdxParam = req.body.healthCategoryIdx
-    const routineIdx = req.query.routineIdx
-    const userId = req.decoded.userId
-
-    // 1. 회원과 요청된 데이터 검증
-    const isValidUser = await processProvider.validateUser(userId, routineIdx);
-    if (!isValidUser) {
-        return res.send(response(baseResponse.TOKEN_VERIFICATION_FAILURE))
-    }
-
-
-    // 운동 건너뛰기 (skip 값을 1로 업데이트)
-    const skipExercise = await processService.updateSkipValue(routineIdx, healthCategoryIdxParam);
-
-    return res.send(response(baseResponse.SUCCESS, skipExercise));
-};
-
-/**
- * 5 API Name : myCalendar 추가 API
+ * 3 API Name : myCalendar 추가 API
  * [POST] /app/process/end
  */
 exports.postMycalendar = async function (req, res) {
     /**
      * Decoded : userId
-     * Query Parameter : routineIdx
-     * Body : totalExerciseTime
+     * Body : totalExerciseTime, routineDetails, originRoutineIdx
      */
     // 시간은 초 단위로 받기
-    const routineIdx = req.body.routineIdx
     const userId = req.decoded.userId
     const totalExerciseTime = req.body.totalExerciseTime
+    const routineContent = req.body.routineDetails
+    const originRoutineIdx = req.body.routineIdx
 
     // 총 운동 시간 유효성 검증
     if(!totalExerciseTime) {
         return res.send(response(baseResponse.PROCESS_TOTALTIME_INVALID))
     }
+
+    // 실제 운동 리스트들 유효성 검증
+    if(!routineContent) {
+        return res.send(response(baseResponse.PROCESS_ROUTINECONTENT_INVALID))
+    }
+
+    // 기존 운동 루틴 Idx 유효성 검증
+    if(!originRoutineIdx || originRoutineIdx === 0) {
+        return res.send(response(baseResponse.PROCESS_ORIGINROUTINEIDX_INVALID))
+    }
+
+    // 새로 만들어진 routineIdx(업데이트 될 수도 있기 때문)
+    const routineIdx = await processService.insertRoutineIdx(routineContent)
+
 
     // 추가 정보
     const userIdx = await processProvider.getUserIdx(userId)
@@ -149,25 +104,24 @@ exports.postMycalendar = async function (req, res) {
     const totalDist = await processProvider.getTotalDist(routineIdx)
 
     // myCalendar에 데이터 저장
-    const postMyCalendar = await processService.postMyCalendar(userIdx, userId, routineIdx, totalExerciseTime, parsedTotalWeight, totalCalories, totalDist)
+    const postMyCalendar = await processService.postMyCalendar(userIdx, userId, routineIdx, originRoutineIdx, totalExerciseTime, parsedTotalWeight, totalCalories, totalDist)
 
-    return res.send(response(baseResponse.SUCCESS, postMyCalendar))
+    return res.send(response(baseResponse.SUCCESS, routineContent))
 }
 
 /**
- * 6 API Name : 결과 조회 API
+ * 4 API Name : 결과 조회 API
  * [GET] /app/process/end
  */
 exports.getProcessResult = async function (req, res) {
     /**
      * Decoded : userId
-     * Query Parameter : dayOfWeek, routineIdx
+     * Query Parameter : routineIdx
      */
-    const dayOfWeek = req.query.dayOfWeek
     const userId = req.decoded.userId
-    const routineIdx = req.query.routineIdx
+    const originRoutineIdx = req.query.routineIdx
 
-    // 오늘 날짜 정보 가져오기
+    // // 오늘 날짜 정보 가져오기
     const currentDate = new Date();
     const year = currentDate.getFullYear();
     const month = String(currentDate.getMonth() + 1).padStart(2, '0'); // 월은 0부터 시작하므로 +1
@@ -175,21 +129,16 @@ exports.getProcessResult = async function (req, res) {
 
     const todayDate = `${year}-${month}-${day}`;
 
-    // 대체 및 스킵된 데이터 다시 불러오기
-    const updateRoutine = await processProvider.getRoutineDetails(dayOfWeek, userId);
-
     // myCalendar에서 데이터 조회
-    const totalData = await processProvider.getTotalData(userId, todayDate)
+    const totalData = await processProvider.getTotalData(userId, todayDate, originRoutineIdx)
 
     // 무게, 시간 차이 조회
-    const getComparison = await processProvider.getComparison(userId, routineIdx)
+    const getComparison = await processProvider.getComparison(userId, originRoutineIdx)
 
     // 운동 횟수 조회
     const countHealth = await processProvider.getHealthCount(userId)
 
     return res.send(response(baseResponse.SUCCESS, {
-        routineIdx: updateRoutine.routineIdx,
-        updateRoutine: updateRoutine.routineDetails,
         totalWeight: totalData.totalWeight,
         totalCalories: totalData.totalCalories,
         totalTime: totalData.totalTime,
